@@ -2,4 +2,3 @@
 ^\.Rproj\.user$
 ^\.Rhistory$
 ^tmp/
-^.*/lnre_productivity_measures\.Rd?$
